--- a/rigtools/ui/aspToolsUI/ui_aspfkInIkSpine.ui
+++ b/rigtools/ui/aspToolsUI/ui_aspfkInIkSpine.ui
@@ -17,32 +17,19 @@
    <layout class="QGridLayout" name="gridLayout_3">
     <item row="0" column="0">
      <layout class="QGridLayout" name="gridLayout_2">
-      <item row="0" column="0">
-       <widget class="QLabel" name="label_2">
+      <item row="0" column="4">
+       <widget class="QCheckBox" name="fkInIkSp_hipBase_cBox">
         <property name="text">
-         <string>Controller Name:-</string>
+         <string>Hip Base Controllers.</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="3">
+      <item row="0" column="2">
        <widget class="QLabel" name="label_5">
         <property name="text">
          <string>Controller Numbers:-</string>
         </property>
        </widget>
-      </item>
-      <item row="0" column="2">
-       <spacer name="horizontalSpacer">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
       </item>
       <item row="0" column="1">
        <widget class="QLineEdit" name="fkInIkSp_ctlName_LE">
@@ -51,10 +38,17 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="4">
+      <item row="0" column="3">
        <widget class="QSpinBox" name="fkInIkSp_ctlNum_spbx">
         <property name="minimum">
          <number>4</number>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0">
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>Controller Name:-</string>
         </property>
        </widget>
       </item>
